--- a/partials/book-list.html
+++ b/partials/book-list.html
@@ -6,7 +6,8 @@
       <select ng-model="orderProp">
         <option value="name">Alphabetical</option>
         <option value="age">Newest</option>
-      </select>
+      </select></br></br></br>
+     <a href="#/films"><h4>Click to Films</h4></a>
     </div>
 
    <div class="col-md-10">
