--- a/partials/film-list.html
+++ b/partials/film-list.html
@@ -7,6 +7,7 @@
         <option value="name">Alphabetical</option>
         <option value="age">Newest</option>
       </select></br></br></br>
+      <a href="#/books"><img ng-scr="{{image}}"></a>
       <a href="#/books"><h4>Click to Books</h4></a>
     </div>
 
